lib_LTLIBRARIES = libstracker.la

libstracker_la_SOURCES = main_controller.C debugging.C debugging.h \
model_components.C model_components.h transitions.C transitions.h backtrace.C \
backtrace.h mpi_state.C mpi_state.h reduction.h utilities.C utilities.h \
mpi_wrappers.h config.C config.h signal_handlers.C signal_handlers.h timer.C \
timer.h state_reduction.C state_reduction.h dependency_matrix.C \
dependency_matrix.h range_set.C range_set.h range_set_table.C range_set_table.h \
dep_matrix_mutator.C dep_matrix_mutator.h analysis_driver.C analysis_driver.h \
helper_thread.C helper_thread.h markov_model.h edge_reduction.C \
edge_reduction.h io_utilities.C io_utilities.h \
graph_model.C graph_model.h \
graph_algorithm.C graph_algorithm.h

#libsmm_la_CPPFLAGS = -I$(top_srcdir)/include
